// Contains API declaration for board information bus.

syntax = "proto3";

package light_detector;

// Represents all the available info retrieval options, which can be modified via info bus.
enum InfoType {
    Gain = 0;
    IntegralTime = 1;
}

// Represents info bus request content send from the client to the board.
message InfoBusRequestContent {
    InfoType infoType = 1;
}

// Represents info bus response content send to the client from the board.
message InfoBusResponseContent {
    uint32 deviceId = 1;
    InfoType infoType = 2;
    uint32 value = 3;
    uint32 nonce = 4;
}